chore: code style fixes chore: fix issue with header overlapping off-screen sidebar on shop

--- a/assets/scss/components/compat/woocommerce/_sidebar.scss
+++ b/assets/scss/components/compat/woocommerce/_sidebar.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 100000;
   height: 100vh;
   overflow: auto;
   transition: all 0.3s ease-out;
